--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "code/externals/spdlog"]
 	path = code/externals/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "code/externals/imgui"]
+	path = code/externals/imgui
+	url = https://github.com/ocornut/imgui.git
